# AISDI-Liniowe

./: CMakeLists.txt  README.html  README.md
tests/: CMakeLists.txt  LinkedListTests.cpp  VectorTests.cpp  test_main.cpp
